--- a/cgmes/cgmes-model-test/pom.xml
+++ b/cgmes/cgmes-model-test/pom.xml
@@ -22,6 +22,22 @@
     <name>CGMES network model test</name>
     <description>CGMES network model for testing</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Automatic-Module-Name>com.powsybl.cgmes.model.test</Automatic-Module-Name>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
