--- a/psse/psse-model-test/pom.xml
+++ b/psse/psse-model-test/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-
     Copyright (c) 2022, RTE (http://www.rte-france.com)
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at http://mozilla.org/MPL/2.0/.
-
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -13,14 +11,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>powsybl-core</artifactId>
+        <artifactId>powsybl-psse</artifactId>
         <groupId>com.powsybl</groupId>
         <version>5.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>powsybl-scripting-test</artifactId>
-    <name>Scripting test</name>
-    <description>Utility classes for script testing</description>
+    <artifactId>powsybl-psse-model-test</artifactId>
+    <name>PSS/E model test</name>
+    <description>PSS/E raw format test data model</description>
 
     <build>
         <plugins>
@@ -30,7 +28,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Automatic-Module-Name>com.powsybl.scripting.test</Automatic-Module-Name>
+                            <Automatic-Module-Name>com.powsybl.psse.model.test</Automatic-Module-Name>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -38,22 +36,4 @@
         </plugins>
     </build>
 
-    <dependencies>
-        <!-- Compilation dependencies -->
-        <dependency>
-            <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-scripting</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
 </project>
