--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -345,6 +345,12 @@
             <artifactId>powsybl-psse-model</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-psse-model-test</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
