--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
         </sonar.coverage.jacoco.xmlReportPaths>
 
         <assertj.version>3.11.0</assertj.version>
-        <autoservice.version>1.0-rc7</autoservice.version>
+        <autoservice.version>1.0.1</autoservice.version>
         <commonscli.version>1.3.1</commonscli.version>
         <commonscompress.version>1.21</commonscompress.version>
         <commonsio.version>2.7</commonsio.version>
@@ -111,7 +111,7 @@
         <jackson-databind.version>2.13.4.2</jackson-databind.version>
         <jama.version>1.0.3</jama.version>
         <jgrapht.version>1.5.1</jgrapht.version>
-        <jimfs.version>1.1</jimfs.version>
+        <jimfs.version>1.2</jimfs.version>
         <jodatime.version>2.10.8</jodatime.version>
         <junit.version>4.13.1</junit.version>
         <logback.version>1.2.10</logback.version>
@@ -130,10 +130,30 @@
         <threeten.version>1.5.0</threeten.version>
         <trove4j.version>3.0.3</trove4j.version>
         <univocity-parsers.version>2.9.1</univocity-parsers.version>
-        <xmlunit.version>2.3.0</xmlunit.version>
+        <xmlunit.version>2.9.0</xmlunit.version>
 
         <powsyblmathnative.version>1.2.1</powsyblmathnative.version>
     </properties>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <annotationProcessorPaths>
+                            <annotationProcessorPath>
+                                <groupId>com.google.auto.service</groupId>
+                                <artifactId>auto-service-annotations</artifactId>
+                                <version>${autoservice.version}</version>
+                            </annotationProcessorPath>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
     <profiles>
         <profile>
