--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -158,6 +158,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-computation-local-test</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-config-classic</artifactId>
             <version>${project.version}</version>
             <scope>runtime</scope>
