--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <module>commons-test</module>
         <module>computation</module>
         <module>computation-local</module>
+        <module>computation-local-test</module>
         <module>config-classic</module>
         <module>config-test</module>
         <module>contingency</module>
@@ -127,6 +128,7 @@
         <snakeyaml.version>1.33</snakeyaml.version>
         <staxutils.version>20070216</staxutils.version>
         <stringtemplate.version>4.3.4</stringtemplate.version>
+        <testcontainers.version>1.17.6</testcontainers.version>
         <threeten.version>1.5.0</threeten.version>
         <trove4j.version>3.0.3</trove4j.version>
         <univocity-parsers.version>2.8.3</univocity-parsers.version>
@@ -156,6 +158,26 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>docker-unit-tests</id>
+            <activation>
+                <property>
+                    <name>powsybl.docker-unit-tests.skip</name>
+                    <value>!false</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludedGroups>com.powsybl.commons.test.DockerTests</excludedGroups>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -789,6 +811,11 @@
                 <groupId>org.scijava</groupId>
                 <artifactId>native-lib-loader</artifactId>
                 <version>${nativelibloader.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers</artifactId>
+                <version>${testcontainers.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.threeten</groupId>
