--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,8 @@
         <trove4j.version>3.0.3</trove4j.version>
         <univocity-parsers.version>2.8.3</univocity-parsers.version>
         <xmlunit.version>2.3.0</xmlunit.version>
+        <xz.version>1.9</xz.version>
+        <zstdjni.version>1.5.2-5</zstdjni.version>
 
         <powsyblmathnative.version>1.2.1</powsyblmathnative.version>
     </properties>
@@ -715,6 +717,16 @@
                 <groupId>org.anarres.graphviz</groupId>
                 <artifactId>graphviz-builder</artifactId>
                 <version>${graphviz-builder.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.luben</groupId>
+                <artifactId>zstd-jni</artifactId>
+                <version>${zstdjni.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.tukaani</groupId>
+                <artifactId>xz</artifactId>
+                <version>${xz.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
