add a unit test ensuring different ways of merge end up with same tie line characteristics
Signed-off-by: Luma <zamarrenolm@aia.es>

--- a/cgmes/cgmes-conversion/pom.xml
+++ b/cgmes/cgmes-conversion/pom.xml
@@ -171,5 +171,10 @@
             <artifactId>xmlunit-core</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-iidm-mergingview</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
