move conversion test tools to a separate module
Signed-off-by: Luma <zamarrenolm@aia.es>

--- a/cgmes/cgmes-extensions/pom.xml
+++ b/cgmes/cgmes-extensions/pom.xml
@@ -42,6 +42,10 @@
         <!-- Compilation dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-cgmes-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-api</artifactId>
             <version>${project.version}</version>
         </dependency>
