--- a/itools-packager/pom.xml
+++ b/itools-packager/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>5.1.0-SNAPSHOT</version>
+        <version>5.1.0-RC1</version>
     </parent>
 
     <artifactId>powsybl-itools-packager-maven-plugin</artifactId>
