--- a/ucte/ucte-converter/pom.xml
+++ b/ucte/ucte-converter/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-ucte</artifactId>
-        <version>5.1.0-SNAPSHOT</version>
+        <version>5.1.0-RC1</version>
     </parent>
 
     <artifactId>powsybl-ucte-converter</artifactId>
