--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
     <modules>
         <module>action</module>
         <module>ampl-converter</module>
+        <module>ampl-executor</module>
         <module>cgmes</module>
         <module>cim-anonymiser</module>
         <module>commons</module>
@@ -217,6 +218,11 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>powsybl-ampl-converter</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>powsybl-ampl-executor</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
