--- a/contingency/contingency-api/pom.xml
+++ b/contingency/contingency-api/pom.xml
@@ -58,6 +58,16 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-modification</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.23</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.23</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
