Short circuit API: add voltage drops to the result and parameters (#2377)
Signed-off-by: Coline PILOQUET <coline.piloquet@rte-france.com>
Co-authored-by: Anne Tilloy <anne.tilloy@rte-france.com>
Co-authored-by: JB-H <jbheyberger@gmail.com>

--- a/shortcircuit-api/src/test/resources/config.yml
+++ b/shortcircuit-api/src/test/resources/config.yml
@@ -1,6 +1,7 @@
 short-circuit-parameters:
   with-limit-violations: false
-  with-voltage-map: false
+  with-fortescue-result: true
+  with-voltage-result: false
   study-type: "SUB_TRANSIENT"
   with-feeder-result: false
   min-voltage-drop-proportional-threshold: 1.2
