--- a/cgmes/pom.xml
+++ b/cgmes/pom.xml
@@ -22,6 +22,7 @@
     <description>CGMES aggregator module</description>
 
     <modules>
+        <module>cgmes-completion</module>
         <module>cgmes-conformity</module>
         <module>cgmes-conversion</module>
         <module>cgmes-extensions</module>
