--- a/ampl-converter/pom.xml
+++ b/ampl-converter/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>5.2.0-SNAPSHOT</version>
+        <version>5.2.0-alpha-1</version>
     </parent>
 
     <artifactId>powsybl-ampl-converter</artifactId>
