--- a/contingency/contingency-dsl/pom.xml
+++ b/contingency/contingency-dsl/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-contingency</artifactId>
-        <version>5.2.0-SNAPSHOT</version>
+        <version>5.2.0-alpha-1</version>
     </parent>
 
     <artifactId>powsybl-contingency-dsl</artifactId>
