--- a/dynamic-simulation/dynamic-simulation-api/pom.xml
+++ b/dynamic-simulation/dynamic-simulation-api/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-dynamic-simulation</artifactId>
-        <version>5.2.0-SNAPSHOT</version>
+        <version>5.2.0-alpha-1</version>
     </parent>
 
     <artifactId>powsybl-dynamic-simulation-api</artifactId>
