fixing min/max p for hvdc reduction into generator
Signed-off-by: HugoKulesza <hugo.kulesza@rte-france.com>

--- a/iidm/iidm-reducer/pom.xml
+++ b/iidm/iidm-reducer/pom.xml
@@ -75,6 +75,10 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-iidm-extensions</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
