--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,9 @@
         <zstdjni.version>1.5.2-5</zstdjni.version>
 
         <powsyblmathnative.version>1.2.1</powsyblmathnative.version>
+
+        <!-- FIXME to remove when updating to parent v9 -->
+        <maven.jacoco.version>0.8.8</maven.jacoco.version>
     </properties>
 
     <profiles>
