--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 19 # FIXME to revert
+          java-version: 11
 
       - name: Build with Maven
         if: matrix.os == 'ubuntu-latest'
