--- a/ampl-executor/pom.xml
+++ b/ampl-executor/pom.xml
@@ -15,7 +15,7 @@ this
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>5.2.0-SNAPSHOT</version>
+        <version>5.2.0-RC1</version>
     </parent>
 
     <artifactId>powsybl-ampl-executor</artifactId>
