--- a/iidm/iidm-reducer/pom.xml
+++ b/iidm/iidm-reducer/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-iidm</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>5.2.0-SNAPSHOT</version>
+        <version>5.2.0-RC1</version>
     </parent>
 
     <artifactId>powsybl-iidm-reducer</artifactId>
