module name + small fixes
Signed-off-by: Nicolas Pierre <nicolas.pierre@artelys.com>

--- a/ampl-executor/pom.xml
+++ b/ampl-executor/pom.xml
@@ -19,7 +19,7 @@ this
     </parent>
 
     <artifactId>powsybl-ampl-executor</artifactId>
-    <name>ampl-executor</name>
+    <name>AMPL model executor</name>
     <description>AMPL model executor interface</description>
 
     <build>
