--- a/powerfactory/powerfactory-db/pom.xml
+++ b/powerfactory/powerfactory-db/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-powerfactory</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>5.2.0-RC1</version>
+        <version>5.2.0</version>
     </parent>
 
     <artifactId>powsybl-powerfactory-db</artifactId>
