--- a/iidm/iidm-test/pom.xml
+++ b/iidm/iidm-test/pom.xml
@@ -44,6 +44,14 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-configuration2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.locationtech.proj4j</groupId>
+            <artifactId>proj4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.proj4j</groupId>
+            <artifactId>proj4j-epsg</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
