--- a/iidm/iidm-test/pom.xml
+++ b/iidm/iidm-test/pom.xml
@@ -41,6 +41,11 @@
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-api</artifactId>
             <version>${project.version}</version>
