Tmp: add modification to replace tie lines by lines
Signed-off-by: VEDELAGO MIORA <miora.ralambotiana@rte-france.com>

--- a/iidm/iidm-modification/pom.xml
+++ b/iidm/iidm-modification/pom.xml
@@ -47,6 +47,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-entsoe-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-extensions</artifactId>
         </dependency>
 
