--- a/iidm/iidm-modification/pom.xml
+++ b/iidm/iidm-modification/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>powsybl-iidm-xml-converter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-single-line-diagram-core</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
