--- a/cgmes/cgmes-gl/pom.xml
+++ b/cgmes/cgmes-gl/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <artifactId>powsybl-cgmes</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>5.3.0-SNAPSHOT</version>
+        <version>5.3.0-alpha-1</version>
     </parent>
 
     <artifactId>powsybl-cgmes-gl</artifactId>
