--- a/action/action-simulator/pom.xml
+++ b/action/action-simulator/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-action</artifactId>
-        <version>5.3.0-SNAPSHOT</version>
+        <version>5.3.0</version>
     </parent>
 
     <artifactId>powsybl-action-simulator</artifactId>
