--- a/ieee-cdf/ieee-cdf-model/pom.xml
+++ b/ieee-cdf/ieee-cdf-model/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-ieee-cdf</artifactId>
-        <version>5.3.0-SNAPSHOT</version>
+        <version>5.3.0</version>
     </parent>
 
     <artifactId>powsybl-ieee-cdf-model</artifactId>
