--- a/iidm/iidm-modification/pom.xml
+++ b/iidm/iidm-modification/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-iidm</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>5.3.0-SNAPSHOT</version>
+        <version>5.3.0</version>
     </parent>
 
     <artifactId>powsybl-iidm-modification</artifactId>
