--- a/psse/pom.xml
+++ b/psse/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-core</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>5.3.0-SNAPSHOT</version>
+        <version>5.3.0</version>
     </parent>
 
     <packaging>pom</packaging>
