test output temporal files to Jimfs
Signed-off-by: Luma <zamarrenolm@aia.es>

--- a/cgmes/cgmes-completion/pom.xml
+++ b/cgmes/cgmes-completion/pom.xml
@@ -75,6 +75,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-config-test</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-cgmes-conformity</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
