add dataframe coverage
Signed-off-by: Nicolas Pierre <nicolas.pierre@artelys.com>

--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -123,6 +123,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-dataframes</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- In test scope, so that coverage is correctly reported but the jar is not packaged for distribution -->
         <dependency>
             <groupId>${project.groupId}</groupId>
