hack to allow java 16 instanceof syntax
Signed-off-by: Nicolas Pierre <nicolas.pierre@artelys.com>

--- a/dataframe/pom.xml
+++ b/dataframe/pom.xml
@@ -21,21 +21,19 @@ this
     <artifactId>powsybl-dataframes</artifactId>
     <name>Dataframe structure</name>
     <description>A java construction of a dataframe data structure</description>
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Automatic-Module-Name>
-                                com.powsybl.ampl.executor
-                            </Automatic-Module-Name>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.1.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>9.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
