--- a/shortcircuit-api/src/test/resources/config.yml
+++ b/shortcircuit-api/src/test/resources/config.yml
@@ -10,8 +10,8 @@ short-circuit-parameters:
   with-shunt-compensators: true
   with-vsc-converter-stations: false
   with-neutral-position: true
-  initial-voltage-profile: "CONFIGURED"
+  initial-voltage-profile-mode: "CONFIGURED"
   configured-initial-voltage-range-coefficients:
     - 380 - 420 -> 1
     - 215 - 235 -> 1.2
-    - 80 - 100 -> 1.3
+    - 80 - 100 -> 1.05
