Upgrade all runtime dependencies to the most recent version
The following remains and is left as is (I did a manual check that there was nothing better available)

$ mvn versions:display-dependency-updates
[INFO]   com.google.code.findbugs:annotations ................ 3.0.1 -> 3.0.1u2
[INFO]   com.powsybl:powsybl-build-tools ............................. 13 -> 14
[INFO]   org.apache.groovy:groovy ..................... 4.0.14 -> 5.0.0-alpha-2
[INFO]   org.apache.groovy:groovy-console ............. 4.0.14 -> 5.0.0-alpha-2
[INFO]   org.apache.groovy:groovy-groovysh ............ 4.0.14 -> 5.0.0-alpha-2
[INFO]   org.apache.groovy:groovy-nio ................. 4.0.14 -> 5.0.0-alpha-2
[INFO]   org.apache.maven:maven-core ................... 3.8.5 -> 4.0.0-alpha-7
[INFO]   org.eclipse.rdf4j:rdf4j-common-transaction ......... 4.3.6 -> 5.0.0-M1
[INFO]   org.eclipse.rdf4j:rdf4j-repository-sail ............ 4.3.6 -> 5.0.0-M1
[INFO]   org.eclipse.rdf4j:rdf4j-rio-rdfxml ................. 4.3.6 -> 5.0.0-M1
[INFO]   org.eclipse.rdf4j:rdf4j-sail-memory ................ 4.3.6 -> 5.0.0-M1

TODO: there's at least one relocation I know of that I didn't handle: findbugs -> spotbugs
TODO: are there other relocations ?

Signed-off-by: HARPER Jon <jon.harper87@gmail.com>

--- a/scripting/pom.xml
+++ b/scripting/pom.xml
@@ -45,7 +45,7 @@
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy</artifactId>
         </dependency>
         <dependency>
@@ -65,7 +65,7 @@
 
         <!-- Runtime dependencies -->
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy-nio</artifactId>
             <scope>runtime</scope>
         </dependency>
