--- a/action/action-dsl-spi/pom.xml
+++ b/action/action-dsl-spi/pom.xml
@@ -41,7 +41,7 @@
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy</artifactId>
         </dependency>
         <dependency>
