--- a/dynamic-simulation/dynamic-simulation-dsl/pom.xml
+++ b/dynamic-simulation/dynamic-simulation-dsl/pom.xml
@@ -43,7 +43,7 @@
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy</artifactId>
         </dependency>
         <dependency>
