--- a/iidm/iidm-scripting/pom.xml
+++ b/iidm/iidm-scripting/pom.xml
@@ -45,7 +45,7 @@
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy</artifactId>
         </dependency>
 
