--- a/shortcircuit-api/src/test/resources/config.yml
+++ b/shortcircuit-api/src/test/resources/config.yml
@@ -11,4 +11,4 @@ short-circuit-parameters:
   with-vsc-converter-stations: false
   with-neutral-position: true
   initial-voltage-profile-mode: "CONFIGURED"
-  voltage-range-data: "voltage-range-data.json"
+  voltage-ranges: "voltage-ranges.json"
