List dynamic simulation models in its own command line
Signed-off-by: lisrte <laurent.issertial@rte-france.com>

--- a/dynamic-simulation/pom.xml
+++ b/dynamic-simulation/pom.xml
@@ -25,5 +25,6 @@
         <module>dynamic-simulation-api</module>
         <module>dynamic-simulation-dsl</module>
         <module>dynamic-simulation-tool</module>
+        <module>dynamic-simulation-models-list</module>
     </modules>
 </project>
