Create a specific module and tool for dynamic security analysis
Signed-off-by: lisrte <laurent.issertial@rte-france.com>

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <module>tools-test</module>
         <module>triple-store</module>
         <module>ucte</module>
+        <module>powsybl-dynamic-security-analysis</module>
     </modules>
 
     <properties>
