Update pom.xml to use project.groupId
Signed-off-by: Avery Cowan <5057071+averycowan@users.noreply.github.com>
Signed-off-by: Avery Cowan <cowana@google.com>

--- a/pom.xml
+++ b/pom.xml
@@ -502,17 +502,17 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.powsybl</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>powsybl-powerfactory-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.powsybl</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>powsybl-powerfactory-dgs</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.powsybl</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>powsybl-powerfactory-converter</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -669,7 +669,7 @@
                 <version>${jimfs.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.powsybl</groupId>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>powsybl-math-native</artifactId>
                 <version>${powsyblmathnative.version}</version>
             </dependency>
