Rename name and description for powsybl-iidm-serializer
Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>

--- a/iidm/iidm-serializer/pom.xml
+++ b/iidm/iidm-serializer/pom.xml
@@ -19,8 +19,8 @@
     </parent>
 
     <artifactId>powsybl-iidm-serializer</artifactId>
-    <name>IIDM XML converter</name>
-    <description>A XML converter implementation for IIDM networks</description>
+    <name>IIDM serializer/deserializer</name>
+    <description>A XML and JSON serializer/deserializer implementation for IIDM networks</description>
 
     <build>
         <plugins>
