Update to parent 18 with default groovydoc attach instead of build-helper-maven-plugin
The build does exactly the same thing as before, but maybe we want to stop discarding groovydoc jars ?

Signed-off-by: HARPER Jon <jon.harper87@gmail.com>

--- a/contingency/contingency-dsl/pom.xml
+++ b/contingency/contingency-dsl/pom.xml
@@ -21,6 +21,11 @@
     <name>Contingency DSL</name>
     <description>A DSL to describe contingency</description>
 
+    <properties>
+      <!-- TODO do we really want to discard groovydocs? -->
+      <groovydoc.attach>false</groovydoc.attach>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
