--- a/action/action-util/pom.xml
+++ b/action/action-util/pom.xml
@@ -22,6 +22,11 @@
     <name>Action utilities</name>
     <description>A set of DSL extensions and utility functions</description>
 
+    <properties>
+      <!-- TODO do we really want to discard groovydocs? -->
+      <groovydoc.attach>false</groovydoc.attach>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
