--- a/iidm/iidm-scripting/pom.xml
+++ b/iidm/iidm-scripting/pom.xml
@@ -22,6 +22,11 @@
     <name>IIDM scripting</name>
     <description>IIDM scripting support</description>
 
+    <properties>
+      <!-- TODO do we really want to discard groovydocs? -->
+      <groovydoc.attach>false</groovydoc.attach>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
