Apply groupId changes to all pom files in the repo
Signed-off-by: Avery Cowan <5057071+averycowan@users.noreply.github.com>
Signed-off-by: Avery Cowan <cowana@google.com>

--- a/ampl-executor/pom.xml
+++ b/ampl-executor/pom.xml
@@ -42,17 +42,17 @@ this
 
     <dependencies>
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-computation</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-ampl-converter</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-api</artifactId>
             <version>${project.version}</version>
         </dependency>
