--- a/powerfactory/powerfactory-db/pom.xml
+++ b/powerfactory/powerfactory-db/pom.xml
@@ -46,11 +46,11 @@
             <artifactId>slf4j-simple</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-commons</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-powerfactory-model</artifactId>
         </dependency>
 
