--- a/powerfactory/powerfactory-dgs/pom.xml
+++ b/powerfactory/powerfactory-dgs/pom.xml
@@ -38,7 +38,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-powerfactory-model</artifactId>
         </dependency>
         <dependency>
