--- a/powerfactory/powerfactory-model/pom.xml
+++ b/powerfactory/powerfactory-model/pom.xml
@@ -63,7 +63,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-commons</artifactId>
         </dependency>
 
@@ -84,7 +84,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-commons-test</artifactId>
             <scope>test</scope>
         </dependency>
