--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -72,7 +72,7 @@
 
         <!-- Test dependencies -->
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-commons-test</artifactId>
             <scope>test</scope>
         </dependency>
