Fix code coverage for iidm-criteria + add UT
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>

--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -257,6 +257,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-iidm-criteria</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-extensions</artifactId>
             <version>${project.version}</version>
         </dependency>
