--- a/powerfactory/pom.xml
+++ b/powerfactory/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-core</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>6.2.2</version>
+        <version>6.2.3-SNAPSHOT</version>
     </parent>
 
     <packaging>pom</packaging>
