--- a/action-ial/action-ial-dsl/pom.xml
+++ b/action-ial/action-ial-dsl/pom.xml
@@ -115,7 +115,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>powsybl-action-util</artifactId>
+            <artifactId>powsybl-action-ial-util</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
